Fixed issue where the sidebar and board overflows the page height

--- a/client/web-app/src/app.module.css
+++ b/client/web-app/src/app.module.css
@@ -5,11 +5,12 @@
 }
 
 .mainContentContainer {
+    display: flex;
+    flex-direction: column;
     flex-grow: 3;
-    height: 100%;
 }
 
 .boardContainer {
     width: 100%;
-    height: 100%
+    height: 100%;
 }
